<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <TextView
            android:id="@+id/result"
            style="@style/Widget.AppCompat.TextView.SpinnerItem"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="right|left|center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <TextView
            android:id="@+id/numberA"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/numberB"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <Button
            android:id="@+id/button1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:text="@string/one"
            android:textSize="25dp"
            android:textStyle="bold"
            app:backgroundTint="@color/green_200" />

        <Button
            android:id="@+id/button2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:text="@string/two"
            android:textSize="25dp"
            android:textStyle="bold"
            app:backgroundTint="@color/green_200" />

        <Button
            android:id="@+id/button3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:text="@string/three"
            android:textSize="25dp"
            android:textStyle="bold"
            app:backgroundTint="@color/green_200" />

        <Button
            android:id="@+id/button_sumar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/add"
            android:textSize="25dp"
            android:textStyle="bold"
            app:backgroundTint="@color/green_500" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <Button
            android:id="@+id/button4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:text="@string/four"
            android:textSize="25dp"
            android:textStyle="bold"
            app:backgroundTint="@color/green_200" />

        <Button
            android:id="@+id/button5"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:text="@string/five"
            android:textSize="25dp"
            android:textStyle="bold"
            app:backgroundTint="@color/green_200" />

        <Button
            android:id="@+id/button6"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:text="@string/six"
            android:textSize="25dp"
            android:textStyle="bold"
            app:backgroundTint="@color/green_200" />

        <Button
            android:id="@+id/button_restar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/subtract"
            android:textSize="35dp"
            android:textStyle="bold"
            app:backgroundTint="@color/green_500" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <Button
            android:id="@+id/button7"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:text="@string/seven"
            android:textSize="25dp"
            android:textStyle="bold"
            app:backgroundTint="@color/green_200" />

        <Button
            android:id="@+id/button8"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:text="@string/eight"
            android:textSize="25dp"
            android:textStyle="bold"
            app:backgroundTint="@color/green_200" />

        <Button
            android:id="@+id/button9"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:text="@string/nine"
            android:textSize="25dp"
            android:textStyle="bold"
            app:backgroundTint="@color/green_200" />

        <Button
            android:id="@+id/button_multiplicar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/multiply"
            android:textSize="25dp"
            android:textStyle="bold"
            app:backgroundTint="@color/green_500" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <Button
            android:id="@+id/buttonSpace"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:textSize="25dp"
            android:textStyle="bold"
            app:backgroundTint="@color/green_700" />

        <Button
            android:id="@+id/button0"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:text="@string/zero"
            android:textSize="25dp"
            android:textStyle="bold"
            app:backgroundTint="@color/green_200" />

        <Button
            android:id="@+id/button_reset"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:text="@string/reset"
            android:textSize="25dp"
            android:textStyle="bold"
            app:backgroundTint="@color/green_700" />

        <Button
            android:id="@+id/button_dividir"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/split"
            android:textSize="30dp"
            android:textStyle="bold"
            app:backgroundTint="@color/green_500" />
    </LinearLayout>

</LinearLayout>